--- a/Api.API/appsettings.json
+++ b/Api.API/appsettings.json
@@ -7,8 +7,8 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Host=db;Port=5432;Database=gastodb;Username=devuser;Password=devpassword"
-  },
+  "DefaultConnection": "Host=localhost;Port=5432;Database=gastodb;Username=devuser;Password=devpassword"
+},
   "Jwt": {
     "Key": "SuaChaveSecretaMuitoLongaEComplexaAqui123!",
     "Issuer": "ControleGastoApi",
